<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >
    <string name="intro_annual_auto">
        <Data><![CDATA[
　　智能提醒，即按照国家相关规定进行智能化的年检提醒，车主无需每个周期都设置一次。
<br/>
<br/>年检小知识
<br/>
<br/>1. 年检时间
<br/>车辆年检也就是我们平时所说的验车，《道路交通安全法实施条例》有关规定：第十六条：机动车应当从注册登记之日起，按照下列期限进行安全技术检验：
<br/>（一）营运载客汽车5年以内每年检验1次；超过5年的，每6个月检验1次；
<br/>（二）载货汽车和大型、中型非营运载客汽车10年以内每年检验1次；超过10年的，每6个月检验1次；
<br/>（三）小型、微型非营运载客汽车6年以内每2年检验1次；超过6年的，每年检验1次；超过15年的，每6个月检验1次；
<br/>（四）摩托车4年以内每2年检验1次；超过4年的，每年检验1次；
<br/>（五）拖拉机和其他机动车每年检验1次。营运机动车在规定检验期限内经安全技术检验合格的，不再重复进行安全技术检验。
<br/>（六）超过报废年限的车辆不可以再过户（买卖），但可以继续使用；买卖的话可以先到车管所办理该车的报废单（注销该车的档案），然后买卖。
<br/>
<br/>2014年5月17日上午，公安部、国家质检总局联合下发《关于加强和改进机动车检验工作的意见》，其中规定公安、质监等政府部门不得开办车检机构，已开办的，9月底前必须彻底脱钩；自9月1日起，试行非营运轿车6年内免检；不得指定检验机构，推动机动车异地年检。
<br/>
<br/>2.所需资料
<br/>
<br/>车辆年检（个人）所需资料：
<br/>①行驶证原件
<br/>②交强险副本
<br/>③身份证复印件
<br/>④车辆
<br/>
<br/>车辆年检（单位）所需资料：
<br/>①行驶证原件
<br/>②交强险副本；
<br/>③代理人身份证复印件
<br/>④车辆
<br/>
<br/>3.免检政策
<br/>2014年5月16日，公安部、国家质检总局公布了《关于加强和改进机动车检验工作的意见》，意见公布了关于机动车检验工作的18项新政。其中最引人关注的便是9月1日起，试行非营运轿车6年内免检。9月1日起，试行6年以内的在用私家小汽车免予上线检验：
<br/>①2010年9月1日之后注册登记的免检；
<br/>②每2年按规定提供交强险、车船税证明，将交通安全违法和交通事故处理完毕后，直接领取检验标志；
<br/>③发生过伤人事故的不在此列。
<br/>市交巡警总队提醒，所谓免检，只是免除上线检测。车主仍然需要每2年定期检验，提供交通事故强制责任保险凭证、车船税纳税或者免征证明后，处理完交通违法、交通事故后，直接向公安交管部门申请领取检验标志。而如果在免检期间，车辆发生过造成人员伤亡的交通事故，就恢复原规定参加检验。（2017年1月）
<br/>本小知识仅供参考，具体内容请以国家相关规定的实际情况为准。
]]> </Data>
    </string>
    <string name="reg_digits">._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ#</string>
    <string name="number_digits">.0123456789</string>
    <string name="language">中文</string>
    <string name="app_state_recode_title">记录</string>
    <string name="app_violation_title">违章查询</string>
    <string name="app_name">酷斯达数字车钥匙</string>
    <string name="flag_info">发现</string>
    <string name="flag_me">我的</string>
    <string name="wallet">钱包</string>
    <string name="share">分享</string>
    <string name="set">设置</string>
    <string name="contact_us">联系我们</string>
    <string name="about">关于</string>
    <string name="nickname">昵称</string>
    <string name="mobile_phone_no">手机号</string>
    <string name="currently_there_is_no_available_vehicles">当前无可用车辆!</string>
    <string name="please_wait_a_moment_data_is_not_loaded">请稍等数据还未加载完成!</string>
    <string name="carmanager">车辆管理</string>
    <string name="new_vehicle">新增车辆</string>
    <string name="license_plate_number">车牌号码 ：</string>
    <string name="vehicle_brand">车辆品牌 ：</string>
    <string name="please_enter_the_license_plate_number">请输入车牌号码</string>
    <string name="vehicle_system">车系 ：</string>
    <string name="vehicle_system_no_space">车系</string>
    <string name="vehicle_type">车型 ：</string>
    <string name="vehicle_type_no_space">车型</string>
    <string name="vin_code">车架号 ：</string>
    <string name="please_enter_vin_code_last_six_number">请输入车架号后六位</string>
    <string name="engine_number">发动机号 ：</string>
    <string name="please_enter_engine_last_six_number">请输入发动机号后六位</string>
    <string name="purchase_date">购车日期 ：</string>
    <string name="date_of_insurance">保险日期 ：</string>
    <string name="year_of_careful_date">年审日期 ：</string>
    <string name="maintenance_date">保养日期 ：</string>
    <string name="terminal_number">终端号 ：</string>
    <string name="can_choose">*可选*</string>
    <string name="see_details">查看详情</string>
    <string name="delete">删除</string>
    <string name="please_enter_a_password">请输入登录密码:</string>
    <string name="network_bad">网络不良</string>
    <string name="please_select_a_vehicle_series">请选择车辆系列</string>
    <string name="please_first_select_the_vehicle_brands">请先选择车辆品牌!</string>
    <string name="please_first_select_a_vehicle_series">请先选择车辆系列!</string>
    <string name="modify_the_vehicle">修改车辆</string>
    <string name="please_select_a_vehicle_model">请选择车辆型号</string>
    <string name="add_a_new_vehicle">添加新车辆 (</string>
    <string name="success">) 成功!</string>
    <string name="online_payment">在线支付</string>
    <string name="not_choose_the_vehicle_license_plate_number">车牌号：</string>
    <string name="as_of_the_date_of_service">服务截止日期：</string>
    <string name="three_handre_dyuan">330.00元</string>
    <string name="three_year">三年期</string>
    <string name="please_select_a_vehicle">请选择车辆</string>
    <string name="method_of_payment">支付方式</string>
    <string name="no_available_vehicles">无可用车辆!</string>
    <string name="alipay_pay_success">支付宝支付成功!</string>
    <string name="you_do_not_install_pay_treasure_or_cancelled_payment">您未安装支付宝或已取消支付!</string>
    <string name="please_install_wechat_software">请先安装微信软件!</string>
    <string name="yuan">元</string>
    <string name="you_on_the_current_activation_vehicle_do_not_have_to_pay">您当前无已激活车辆！无需支付!</string>
    <string name="sharing_software">分享软件：</string>
    <string name="sharing_website">分享官网：</string>
    <string name="share_a_circle_of_friends">分享朋友圈</string>
    <string name="share_wechat">分享微信</string>
    <string name="security">账号与安全</string>
    <string name="message_switch">消息开关</string>
    <string name="privacy_switch">隐私开关</string>
    <string name="prompt_box_switch">提示框开关</string>
    <string name="sound_and_vibration">声音与震动</string>
    <string name="change_phone_number">更改手机号</string>
    <string name="binding_email">绑定邮箱</string>
    <string name="scurity_issues">安全问题</string>
    <string name="click_settings">点击设置</string>
    <string name="click_modify">点击修改</string>
    <string name="modify_password">修改密码</string>
    <string name="not_login">未登录</string>
    <string name="unbounded">未绑定</string>
    <string name="setup_gesture_code">设置手势密码</string>
    <string name="forget_gesture_code">忘记手势密码?</string>
    <string name="use_other_account_login">用其他账号登录</string>
    <string name="set_gesture_pattern">绘制解锁图案</string>
    <string name="set_gesture_pattern_reason">设置手势密码，设置二次相同手势</string>
    <string name="reset_password">选择验证方式</string>
    <string name="please_choose_the_following_method_to_reset_your_password">请选择以下方式重置您的密码</string>
    <string name="tip">小提示 ： </string>
    <string name="the_tip">提示</string>
    <string name="please_choose_the_following_method_to_reset_your_phone_number">请选择以下方式重置您的手机号</string>
    <string name="please_choose_the_following_method_to_reset_your_aderess">请选择以下方式重置您的邮箱</string>
    <string name="please_choose_the_following_method_to_reset_your_security_issues">请选择以下方式重置您的安全问题</string>
    <string name="mobile_phone_number_find_back">手机号找回</string>
    <string name="modify_email">修改邮箱</string>
    <string name="modify_phone_number">修改手机号</string>
    <string name="modify_security_issues">修改安全问题</string>
    <string name="the_new_email">新邮箱</string>
    <string name="please_enter_a_new_email">请输入新邮箱</string>
    <string name="please_enter_the_corresponding_answer">请输入对应问题的答案</string>
    <string name="validation">验证</string>
    <string name="email_back">邮箱找回</string>
    <string name="mobile_phone_number_to_reset_the_password">手机号码重置密码</string>
    <string name="mobile_phone_number_to_reset_the_phone_number">手机号码重置手机号</string>
    <string name="reset_the_phone_number">重置手机号</string>
    <string name="please_enter_phone_number">请输入手机号码</string>
    <string name="please_enter_new_phone_number">请输入新手机号码</string>
    <string name="please_enter_erification_code">请输入验证码</string>
    <string name="mobile_phone_number">手机号码</string>
    <string name="verification_code">验证码</string>
    <string name="not_receive_verification_code">接收不到验证码?</string>
    <string name="to_obtain">获取</string>
    <string name="using_voice_verification">请使用语音验证</string>
    <string name="voice_verification">语音验证</string>
    <string name="check_the_solution">接收不到验证码，点此查看解决方案</string>
    <string name="how_to_obtain_authentication_code">如何获取验证码</string>
    <string name="security_authentication">安全问题验证</string>
    <string name="the_new_password">新密码 :</string>
    <string name="the_phone_number">手机号:</string>
    <string name="please_enter_a_new_password">请输入新密码</string>
    <string name="please_enter_a_new_password_again">请再次输入新密码</string>
    <string name="verify_password">验证密码</string>
    <string name="two_information_input_please_input_again">两次信息输入不相同，请重新输入!</string>
    <string name="mobile_phone_number_to_reset">手机号重置</string>
    <string name="email_to_reset">邮箱重置</string>
    <string name="anquanwenti_to_reset">安全问题重置</string>
    <string name="mobile_phone_back">手机找回</string>
    <string name="problem_a">问题一：</string>
    <string name="the_answer">答案：</string>
    <string name="when_is_your_birth_place">您的出生地点是?</string>
    <string name="reset_email_phone_number">手机号码重置邮箱</string>
    <string name="mobile_phone_number_to_reset_the_security_issues">手机号码重置安全问题</string>
    <string name="the_answer_can_not_be_empty_please_retry_after_input">问题答案不能为空，请输入后重试</string>
    <string name="authentication_is_successful">验证成功</string>
    <string name="question_two">问题二：</string>
    <string name="question_three">问题三：</string>
    <string name="email_fill_in_error_please_input_the_correct_email">邮箱填写错误请输入正确的邮箱</string>
    <string name="email_reset_successfully">邮箱重置成功!</string>
    <string name="validation_fails">验证失败</string>
    <string name="we_have_sent_an_email_to_your_mailbox_please_pay_attention_to_check">我们已发送一封邮件到您邮箱中，请注意查收!</string>
    <string name="password_is_wrong_please_input_english_numbers_underscore_combination">"密码错，请输入6-31位英文,数字,下划线组合!"</string>
    <string name="repeated_password_is_wrong">重复密码错!</string>
    <string name="password_reset_successfully">密码重置成功!</string>
    <string name="please_enter_the_complete_phone_number">请输入完整手机号!</string>
    <string name="the_phone_number_wrong">电话号码错!</string>
    <string name="verification_code_for_failure_please_try_again">验证码获取失败，请重试</string>
    <string name="verfy_code">验 证 码:</string>
    <string name="reset_success">重置成功</string>
    <string name="message">消息</string>
    <string name="no_message">没有消息</string>
    <string name="control">控制</string>
    <string name="the_alarm">警报</string>
    <string name="company_profile">公司简介：</string>
    <string name="complaints_suggestions">投诉建议：</string>
    <string name="terms_of_use_and_privacy_policy">使用条款和隐私政策</string>
    <string name="sex">性别</string>
    <string name="men">男</string>
    <string name="women">女</string>
    <string name="not_to_choose">未选择</string>
    <string name="improve_the_personal_information">完善个人信息</string>
    <string name="add_a_picture">添加头像:</string>
    <string name="click_on_the_binding">点击绑定</string>
    <string name="click_on_the_input">点击输入</string>
    <string name="enter_the_nickname_aa">输入昵称:</string>
    <string name="binding_email_aa">绑定邮箱:</string>
    <string name="registered">注册</string>
    <string name="confirm_password">确认密码:</string>
    <string name="please_make_sure_the_password">请再次输入密码</string>
    <string name="pelease_enter_the_password">请输入密码</string>
    <string name="authorization_details">授权详情</string>
    <string name="licensor_nickname">授权人昵称：</string>
    <string name="nothing">无</string>
    <string name="authorization_object">授权对象:</string>
    <string name="authorized_vehicles">授权车辆:</string>
    <string name="authorized_time_colon">授权时间:</string>
    <string name="authorized_limit">已授权限</string>
    <string name="authorization_management">副车主授权</string>
    <string name="vehicle_selection">车辆选择</string>
    <string name="select_contact">选择联系人</string>
    <string name="from">从 </string>
    <string name="start_time">开始时间</string>
    <string name="to"> 至  </string>
    <string name="end_time">结束时间</string>
    <string name="determine_authorization">确定授权</string>
    <string name="qr_code_is_generated">生成二维码</string>
    <string name="password_simbol">  密     码:</string>
    <string name="confirm">确定</string>
    <string name="mobile_phone_number_aa">手机号码:</string>
    <string name="gestures_password">手势密码</string>
    <string name="carinfo_modify">车辆信息修改</string>
</resources>