<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:androidme="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
              android:background="@color/background_all"
    android:orientation="vertical"
    tools:ignore="HardcodedText,ContentDescription" >
    <view.view4me.set.ClipTitleMeSet
        android:id="@+id/title_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        androidme:text="@string/security" />

    <view.clip.ClipLineBtnInptxt
        android:id="@+id/txt_gesture_password"
        style="@style/Single_line_with_background"
        androidme:lefttxt="@string/gestures_password"
        androidme:righttxt="@string/click_settings" />
    <view.clip.ClipLineBtnInptxt
        android:id="@+id/txt_password"
        style="@style/Single_line_with_background"
        androidme:lefttxt="@string/modify_password"
        androidme:righttxt="@string/click_modify" />

    <view.clip.ClipLineBtnInptxt
        android:id="@+id/txt_phone"
        style="@style/Single_line_with_background"
        androidme:lefttxt="@string/change_phone_number"
        androidme:righttxt="@string/not_login" />

    <view.clip.ClipLineBtnInptxt
        android:id="@+id/txt_mail"
        style="@style/Single_line_with_background"
        androidme:lefttxt="@string/binding_email"
        androidme:righttxt="@string/unbounded" />

    <!--<view.clip.ClipLineBtnInptxt
        android:id="@+id/txt_idcard"
        style="@style/Single_line_with_background"
        androidme:lefttxt="身份证号:"
        androidme:righttxt="未绑定" />-->
    <view.clip.ClipLineBtnInptxt
        android:id="@+id/txt_anquanwenti"
        style="@style/Single_line_with_background"
        androidme:lefttxt="@string/scurity_issues"
        androidme:righttxt="@string/click_settings" />
</LinearLayout>