<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
              xmlns:androidme="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="HardcodedText,ContentDescription" >

    <com.kulala.staticsview.titlehead.ClipTitleHead
        android:id="@+id/title_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        androidme:leftres="@drawable/titlehead_back"
        androidme:text="@string/carinfo_modify" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <view.clip.ClipLineBtnInptxt
                android:id="@+id/txt_carname"
                style="@style/Single_line_with_background"
                androidme:lefttxt="@string/license_plate_number"
                androidme:gravityTxt="left"
                androidme:righttxt="@string/nothing" />

            <view.clip.ClipLineBtnInptxt
                android:id="@+id/txt_carbrand"
                style="@style/Single_line_with_background"
                androidme:lefttxt="@string/vehicle_brand"
                androidme:gravityTxt="left"
                androidme:righttxt="@string/nothing" />

            <view.clip.ClipLineBtnInptxt
                android:id="@+id/txt_carseries"
                style="@style/Single_line_with_background"
                androidme:lefttxt="@string/vehicle_system"
                androidme:gravityTxt="left"
                androidme:righttxt="@string/nothing" />

            <view.clip.ClipLineBtnInptxt
                android:id="@+id/txt_cartype"
                style="@style/Single_line_with_background"
                androidme:lefttxt="@string/vehicle_type"
                androidme:gravityTxt="left"
                androidme:righttxt="@string/nothing" />

            <view.clip.ClipLineBtnInptxt
                android:id="@+id/txt_vin"
                style="@style/Single_line_with_background"
                androidme:lefttxt="@string/vin_code"
                androidme:gravityTxt="left"
                androidme:righttxt="@string/nothing" />

            <view.clip.ClipLineBtnInptxt
                android:id="@+id/txt_carenginenum"
                style="@style/Single_line_with_background"
                androidme:lefttxt="@string/engine_number"
                androidme:gravityTxt="left"
                androidme:righttxt="@string/nothing" />

            <view.clip.ClipLineBtnInptxt
                android:visibility="gone"
                android:id="@+id/txt_datebuy"
                style="@style/Single_line_with_background"
                androidme:lefttxt="@string/purchase_date"
                androidme:gravityTxt="left"
                androidme:righttxtcolor="@color/black"
                androidme:rightres="@drawable/icon_common_arrow_down"
                androidme:righttxt="@string/can_choose" />

            <view.clip.ClipLineBtnInptxt
                android:visibility="gone"
                android:id="@+id/txt_dateInsurance"
                style="@style/Single_line_with_background"
                androidme:lefttxt="@string/date_of_insurance"
                androidme:gravityTxt="left"
                androidme:righttxtcolor="@color/black"
                androidme:rightres="@drawable/icon_common_arrow_down"
                androidme:righttxt="@string/can_choose" />

            <view.clip.ClipLineBtnInptxt
                android:visibility="gone"
                android:id="@+id/txt_dateVerification"
                style="@style/Single_line_with_background"
                androidme:lefttxt="@string/year_of_careful_date"
                androidme:gravityTxt="left"
                androidme:righttxtcolor="@color/black"
                androidme:rightres="@drawable/icon_common_arrow_down"
                androidme:righttxt="@string/can_choose" />

            <view.clip.ClipLineBtnInptxt
                android:visibility="gone"
                android:id="@+id/txt_datemaintain"
                style="@style/Single_line_with_background"
                androidme:lefttxt="@string/maintenance_date"
                androidme:gravityTxt="left"
                androidme:righttxtcolor="@color/black"
                androidme:rightres="@drawable/icon_common_arrow_down"
                androidme:righttxt="@string/can_choose" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_confirm"
        style="@style/Button_round"
        android:layout_margin="10dp"
        android:text="@string/confirm" />

</LinearLayout>