<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:androidme="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical"
              tools:ignore="HardcodedText,ContentDescription">

    <view.view4me.set.ClipTitleMeSet
        android:id="@+id/title_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        androidme:text="@string/improve_the_personal_information"
        />

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="left|center_vertical"
            android:text="小提示:"
            android:textColor="@color/black"
            android:textSize="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:singleLine="false"
            android:gravity="left|center_vertical"
            android:text="身份证号或邮箱至少填写一项，以便找回密码"
            android:textColor="@color/red_dark"
            android:textSize="12dp"/>
    </LinearLayout>-->

    <view.clip.ClipLineBtnInptxt
        android:id="@+id/txt_head"
        style="@style/Single_line_with_background"
        androidme:lefttxt="@string/add_a_picture"
        androidme:righttxt="@string/click_settings"/>

    <view.clip.ClipLineBtnInptxt
        android:id="@+id/txt_nickname"
        style="@style/Single_line_with_background"
        androidme:lefttxt="@string/enter_the_nickname_aa"
        androidme:righttxt="@string/click_on_the_input"/>

    <view.clip.ClipLineBtnInptxt
        android:id="@+id/txt_mail"
        style="@style/Single_line_with_background"
        androidme:lefttxt="@string/binding_email_aa"
        androidme:righttxt="@string/click_on_the_binding"/>

    <!--<view.clip.ClipLineBtnInptxt
        android:id="@+id/txt_idcard"
        style="@style/Single_line_with_background"
        androidme:lefttxt="身份证号:"
        androidme:righttxt="点击输入"/>-->

    <Button
        android:id="@+id/btn_confirm"
        style="@style/Button_round"
        android:layout_marginTop="16dp"
        android:text="@string/confirm" />
</LinearLayout>