<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
              xmlns:androidme="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="HardcodedText,ContentDescription" >
    <view.view4me.set.ClipTitleMeSet
        android:id="@+id/title_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        androidme:text="@string/authorization_details"
        />
    <view.clip.ClipLineBtnInptxt
        android:id="@+id/txt_nickname"
        style="@style/Single_line_with_background"
        androidme:lefttxt="@string/licensor_nickname"
        androidme:righttxt="@string/nothing" />
    <view.clip.ClipLineBtnInptxt
        android:id="@+id/txt_phone"
        style="@style/Single_line_with_background"
        androidme:lefttxt="@string/authorization_object"
        androidme:righttxt="@string/nothing" />


    <view.clip.ClipLineBtnInptxt
        android:id="@+id/txt_carname"
        style="@style/Single_line_with_background"
        androidme:lefttxt="@string/authorized_vehicles"
        androidme:righttxt="@string/nothing" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp" >

        <view.clip.ClipLineBtnInptxt
            style="@style/Single_line_with_background"
            androidme:lefttxt="@string/authorized_time_colon"/>

        <TextView
            android:id="@+id/txt_time"
            style="@style/Single_line_text_trans"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="right|center_vertical"
            android:paddingLeft="110dp"
            android:paddingRight="10dp"
            android:singleLine="false"
            android:text="@string/nothing"
            android:textColor="@color/gray_text" />
    </RelativeLayout>

    <TextView
        style="@style/Single_line_text_trans"
        android:layout_height="30dp"
        android:background="@color/gray_light"
        android:paddingLeft="10dp"
        android:text="@string/authorized_limit"
        android:textSize="14dp"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/list_authors"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/white"
        android:dividerHeight="1dp"
        android:visibility="gone"/>

</LinearLayout>