<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
              xmlns:androidme="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="HardcodedText,ContentDescription" >
    <view.view4me.set.ClipTitleMeSet
        android:id="@+id/title_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        androidme:text="@string/registered"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/Single_line_text_trans"
                android:layout_marginTop="17dp"
                android:gravity="left|center_vertical"
                android:text="@string/mobile_phone_number_aa" />

            <TextView
                style="@style/Single_line_text_trans"
                android:layout_marginTop="17dp"
                android:gravity="left|center_vertical"
                android:text="@string/password_simbol"
                android:id="@+id/textView3" />

            <TextView
                style="@style/Single_line_text_trans"
                android:layout_marginTop="17dp"
                android:gravity="left|center_vertical"
                android:text="@string/confirm_password" />

            <TextView
                style="@style/Single_line_text_trans"
                android:layout_marginTop="17dp"
                android:gravity="left|center_vertical"
                android:text="@string/verfy_code"
                android:id="@+id/textView2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp" >

            <EditText
                android:id="@+id/txt_input_telephone"
                style="@style/Edittext_input_board"
                android:layout_marginTop="15dp"
                android:digits="@string/reg_digits"
                android:gravity="left|center_vertical"
                android:hint="@string/please_enter_phone_number"
                android:inputType="phone"
                android:maxLength="11" />

            <EditText
                android:id="@+id/txt_input_password"
                style="@style/Edittext_input_board"
                android:layout_marginTop="15dp"
                android:digits="@string/reg_digits"
                android:gravity="left|center_vertical"
                android:hint="@string/pelease_enter_the_password"
                android:inputType="textPassword"
                android:maxLength="31" />

            <EditText
                android:id="@+id/txt_input_password_rep"
                style="@style/Edittext_input_board"
                android:layout_marginTop="15dp"
                android:digits="@string/reg_digits"
                android:gravity="left|center_vertical"
                android:hint="@string/please_make_sure_the_password"
                android:inputType="textPassword"
                android:maxLength="31" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">


                <EditText
                    android:id="@+id/txt_input_verificationcode"
                    style="@style/Edittext_input_board"
                    android:digits="@string/reg_digits"
                    android:gravity="left|center_vertical"
                    android:hint="@string/please_enter_erification_code"
                    android:inputType="number"
                    android:maxLength="6"/>

                <Button
                    android:id="@+id/btn_getverificationcode"
                    style="@style/Button_round_25dp"
                    android:layout_width="80dp"
                    android:layout_height="41dp"
                    android:layout_alignParentRight="true"
                    android:layout_margin="2dp"
                    android:text="@string/to_obtain"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/txt_cannot_receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_gravity="right"
        android:gravity="right|center_vertical"
        android:text="@string/not_receive_verification_code"
        android:textColor="@color/blue_light"
        android:textSize="16dp" />
    <Button
        android:id="@+id/btn_confirm_register"
        style="@style/Button_round"
        android:layout_margin="10dp"
        android:text="@string/registered"/>

</LinearLayout>