<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:androidme="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                tools:ignore="HardcodedText,ContentDescription">
    <view.view4me.set.ClipTitleMeSet
        android:id="@+id/title_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        androidme:text="@string/authorization_management" />

    <view.clip.ClipLineBtnInptxt
        android:id="@+id/txt_pickcar"
        style="@style/Single_line_with_background"
        android:layout_below="@+id/title_head"
        androidme:lefttxt="@string/vehicle_selection"
        androidme:rightres="@drawable/right_chacha"
        androidme:righttxt="@string/not_to_choose"/>

    <view.clip.ClipLineBtnInptxt
        android:id="@+id/txt_picktime"
        style="@style/Single_line_with_background"
        android:layout_below="@+id/txt_pickcar"
        androidme:lefttxt="@string/authorized_time_colon"
        androidme:righttxt="请选择结束时间"/>

    <view.clip.ClipLineBtnInptxt
        android:id="@+id/txt_pickuser"
        style="@style/Single_line_with_background"
        android:layout_below="@+id/txt_picktime"
        androidme:lefttxt="@string/select_contact"
        androidme:rightres="@drawable/right_chacha"
        androidme:righttxt="@string/not_to_choose"
        android:visibility="gone"/>

    <!--<view.clip.ClipLineBtnInptxt-->
    <!--android:id="@+id/txt_funcchoose"-->
    <!--style="@style/Single_line_with_background"-->
    <!--android:layout_below="@+id/txt_pickuser"-->
    <!--androidme:lefttxt="功能权限"-->
    <!--androidme:rightres="@drawable/right_chacha"-->
    <!--androidme:righttxt="未选择"-->
    <!--android:visibility="gone"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txt_pickcar"
        android:layout_marginLeft="100dp"
        android:gravity="right|center_vertical"
        android:orientation="horizontal"
        android:paddingRight="40dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textColor="@color/black"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/txt_timefrom"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_weight="50"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/start_time"
            android:textColor="@color/light_blue"
            android:textSize="14dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textColor="@color/black"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/txt_timeto"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_weight="50"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/end_time"
            android:textColor="@color/light_blue"
            android:textSize="14dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/btn_confirm"
            style="@style/Button_round"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginRight="5dp"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/determine_authorization"/>

        <Button
            android:id="@+id/btn_qrcode"
            style="@style/Button_round"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/qr_code_is_generated"
            android:visibility="gone"/>
    </LinearLayout>

</RelativeLayout>